# openpose

./: .gitignore  CMakeLists.txt
assets/: CameraConfig.cfg
assets/python/: ClassifierParam.py  ModelCPPCaller.py
assets/python/models/Weizmann/: mode3_with_scale.pth.tar  model1.pth.tar  model2_with_scale.pth.tar
assets/python/models/ver1/: model_best.pth.tar
assets/python/models/ver2/: model6_with_scale.pth.tar  model_best_ver2.pth.tar  model_best_ver3.pth.tar  model_best_ver4.pth.tar  model_best_ver4_with_start_ratio.pth.tar  model_best_ver5_with_start_ratio.pth.tar
cmake/Modules/: FindSpinnaker.cmake
data/: handwaving.txt  outputdemo
examples/tutorial_thread/: 3_user_input_processing_and_output.cpp  CMakeLists.txt  my_pose_detector.cpp
include/openpose_camera/: CMakeLists.txt  Dataset.hpp  WPoseExtrator.hpp  headers.hpp  myDatum.hpp  openpose_producer.hpp  postProcessing.hpp  renderer.hpp
openpose_camera/: CMakeLists.txt  openpose_camera.cpp
openpose_camera/src/: CMakeLists.txt  WPoseExtrator.cpp  openpose_producer.cpp  postProcessing.cpp  readActionStruct.cpp  renderer.cpp
